--- a/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Details.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Details.cshtml
@@ -36,19 +36,22 @@
         </div>
         <div class="col-xl-5 col-12">
             <dl class="row mb-0">
-                
+
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Ranking):</dt>
                 <dd class="col-sm-8 mb-1">@Model.Ranking</dd>
 
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TotalPoints):</dt>
+                <dd class="col-sm-8 mb-1">@Model.TotalPoints</dd>
+
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.Away):</dt>
                 <dd class="col-sm-8 mb-1">@Model.TeamGameWeak.Away.Name</dd>
-                
+
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak._365_MatchId):</dt>
                 <dd class="col-sm-8 mb-1">@Model.TeamGameWeak._365_MatchId</dd>
-                
+
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.AwayScore):</dt>
                 <dd class="col-sm-8 mb-1">@Model.TeamGameWeak.AwayScore</dd>
-                
+
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.StartTime):</dt>
                 <dd class="col-sm-8 mb-1">@Model.TeamGameWeak.StartTime</dd>
 
