--- a/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
@@ -31,6 +31,10 @@
             </div>
             <div class="col-xl-6 col-12">
                 <dl class="row mb-0">
+
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TotalPoints):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.TotalPoints</dd>
+
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model._365_PlayerId):</dt>
                     <dd class="col-sm-8 mb-1">@Model._365_PlayerId</dd>
 
@@ -47,7 +51,7 @@
 
 
 
-                   
+
                 </dl>
             </div>
         </div>
