--- a/Dashboard/Areas/TeamEntity/Views/Player/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/CreateOrEdit.cshtml
@@ -148,6 +148,13 @@
                                                 </div>
                                             </div>
                                         }
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="TotalPoints" class="form-label"></label>
+                                                <input asp-for="TotalPoints" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get($"TotalPoints"))" />
+                                                <span asp-validation-for="TotalPoints" class="text-danger"></span>
+                                            </div>
+                                        </div>
                                     </div>
 
                                     <div class="row">
