--- a/Dashboard/Areas/TeamEntity/Views/Player/Filter.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Filter.cshtml
@@ -14,7 +14,7 @@
 
     <div class="card-body mt-2">
         <form asp-action="LoadTable" class="filter">
-           
+
             <div class="row g-1 mb-md-1">
                 <div class="col-md-6 col-12">
                     <div class="mb-1">
@@ -32,11 +32,29 @@
                         </select>
                     </div>
                 </div>
-             
+
             </div>
 
             <div class="row g-1 mb-md-1">
-               
+
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="PointsFrom" class="form-label">@Localizer.Get("PointsFrom")</label>
+                        <input type="text" class="form-control" asp-for="PointsFrom">
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="PointsTo" class="form-label">@Localizer.Get("PointsTo")</label>
+                        <input type="text" class="form-control" asp-for="PointsTo">
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row g-1 mb-md-1">
+
                 <div class="col-md-6">
                     <label asp-for="CreatedAtFrom" class="form-label"></label>
                     <div class="mb-0">
